// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incoming env 1`] = `
"{
				// @sync env=ENV_TEST_KEY
				// \\"key\\": \\"value\\"
			}"
`;

exports[`incoming env 2`] = `
"{
				// @sync env=ENV_TEST_KEY
				\\"key\\": \\"value\\"
			}"
`;

exports[`incoming host 1`] = `
"{
				// @sync host=pc
				\\"key\\": \\"value\\"
			}"
`;

exports[`incoming host 2`] = `
"{
				// @sync host=invalid
				// \\"key\\": \\"value\\"
			}"
`;

exports[`incoming operating system 1`] = `
"{
				// @sync os=windows
				\\"key\\": \\"value\\"
			}"
`;

exports[`incoming operating system 2`] = `
"{
				// @sync os=mac
				// \\"key\\": \\"value\\"
			}"
`;

exports[`incoming operating system 3`] = `
"{
				// @sync os=linux
				// \\"key\\": \\"value\\"
			}"
`;

exports[`outgoing 1`] = `
"{
		// @sync ...
		// \\"key\\": \\"value\\",

		// @invalid
		\\"key2\\": \\"value2\\"
	}"
`;
